syntax="proto3";

option go_package="./proto";

package my_service;

service Service{
  rpc RequestResponse(NoParam) returns (HelloResponse); 
  rpc ServerSideStreaming(NamesList) returns (stream HelloResponse);
  rpc ClientSideStreaming(stream HelloRequest) returns (MessagesList);
  rpc BidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);
}

message NoParam{};

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string message = 1;
}

message NamesList{
  repeated string names = 1;
}

message MessagesList{
  repeated string messages = 1;
}